[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="algorithms"
dynamic = ["version"]
license = {text = "MIT"}
readme="README.rst"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    ]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    ]
description="My implementations of various algorithms"
keywords=['algorithms']

[project.scripts]
tipseq_analysis = "algorithms.cli:main"

[tool.setuptools.dynamic]
version = {attr = "algorithms.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"algorithms" = ["py.typed"]

[tool.bumpversion]
current_version="0.1.0"
commit=true
tag=true

[[tool.bumpversion.files]]
file="src/algorithms/__init__.py"
search="__version__='{current_version}'"
replace="__version__='{new_version}'"

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "D",           # pydocstyle
  "C4",          # flake8-comprehensions
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]

[tool.mypy]
python_version = "3.11"
files = ["src/algorithms"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
